--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -257,6 +257,7 @@
     <string name="context_moving" context="while moving a file or folder">Moving</string>
     <string name="context_sharing" context="while sharing a folder">Sharing folder</string>
     <string name="context_copy" context="Item menu option upon right click on one or multiple files.">Copy</string>
+    <string name="context_upload" context="Item menu option upon right click on one or multiple files.">Upload</string>
     <string name="context_copying" context="while copying a file or folder">Copying</string>
     <string name="context_creating_link" context="status text">Creating link</string>
     <string name="context_moving_to_trash" context="status text">Moving to trash</string>
