--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -301,6 +301,7 @@
     <string name="context_no_sent" context="error message when sending a file">Error. No se pudo enviar</string>
     <string name="context_no_copied" context="error message">Error. No se pudo copiar</string>
     <string name="context_correctly_moved" context="success message when moving a node">Movido correctamente</string>
+    <string name="context_correctly_moved_to_rubbish" context="success message when moving a node">Enviado correctamente a la Papelera</string>
     <string name="context_no_moved" context="error message">Error. No se pudo mover</string>
     <string name="context_correctly_shared" context="success message when sharing a folder">Compartido correctamente</string>
     <string name="context_no_shared" context="error message">Error. No se pudo compartir</string>
