--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -273,6 +273,7 @@
     <string name="context_send_file_inbox" context="send the file to inbox">Send to Inbox</string>
     <string name="context_copy_link" context="get the link and copy it">Copy link</string>
     <string name="context_remove" context="Menu option to delete one or multiple selected items.">Remove</string>
+    <string name="context_delete_offline" context="Menu option to delete selected items of the offline state">Delete for Offline</string>
     <string name="context_share_folder" context="menu item">Share folder</string>
     <string name="context_send_file" context="menu item">Send file</string>
     <string name="context_view_shared_folders" context="open a shared folder">View shared folders</string>
