--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -46,8 +46,9 @@
     <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Más opciones&#8230;</string> 
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">¿Quieres borrar el contacto?</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">¿Deseas borras estos contactos?</string>  
-    <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">¿Enviar a la papelera de reciclaje?</string>
-    <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">¿Eliminar completamente de MEGA?</string>
+    <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">¿Está seguro de que desea enviar este elemento a la Papelera?</string>
+    <string name="title_delete_from_mega" context="confirmation message before removing a file">Borrar de MEGA</string>
+    <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">¿Está seguro de que desear eliminar completamente este elemento de MEGA?</string>
     <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">Si abandonas la carpeta, no podrás acceder a ella de nuevo</string>
     
     <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Entrantes</string>
