--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,8 +48,9 @@
     <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">More options&#8230;</string> 
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Do you want to remove the contact</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Do you want to remove these contacts?</string>  
-    <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">Move to the Rubbish bin?</string>
-    <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">Delete from MEGA?</string>
+    <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">Are you sure you want to move this element to the Rubbish Bin?</string>
+    <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">Are you sure you want to delete this element permanently?</string>
+    <string name="title_delete_from_mega" context="confirmation message before removing a file">Delete from MEGA</string>
     <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">If you leave the folder, you will not be able to see it again</string>
     
     <string name="action_change_mode_in" context="Folders that have been shared with the user from other MEGA users">Incoming Shares</string>
