--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -16,9 +16,11 @@
     <string name="general_import_to" context="When importing a file to a location in MEGA. This is the text of the button after selection the destination">Importar a</string>
     <string name="general_select" context="Selecting a specific location in MEGA. This is the text of the button">Seleccionar</string>
     <string name="general_select_to_upload" context="Selecting a specific location in MEGA. This is the text of the button">Seleccionar ficheros</string>
+        <string name="general_select_to_download" context="Selecting a specific location in MEGA. This is the text of the button">Seleccionar carpeta</string>
     <string name="general_create" context="This is the final button when creating a folder in the dialog where the user inserts the folder name">Crear</string>
     <string name="general_upload" context="Button text when uploading a file to a previously selected location in MEGA">Subir Archivo</string>
     <string name="general_download" context="Item menu option upon right click on one or multiple files.">Descargar</string>
+    <string name="general_download_here" context="Item menu option upon right click on one or multiple files.">Descargar Aquí</string>
     <string name="general_add" context="button">Añadir</string>
     <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Vaciar</string>
     <string name="general_loading" context="state previous to import a file">Cargando&#8230;</string>
