--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -65,6 +65,8 @@
     <string name="action_upload" context="Button text when choosing the destination location in MEGA">Subir a</string>
     <string name="action_settings" context="Menu item">Configuración</string>
     <string name="action_search" context="Search button">Buscar</string>
+    <string name="action_play" context="Search button">Play</string>
+    <string name="action_pause" context="Search button">Pausa</string>
     <string name="action_refresh" context="Menu item">Actualizar</string>
     <string name="action_sort_by" context="Menu item">Ordenar por&#8230;</string>
     <string name="action_help" context="Menu item">Ayuda</string>
