--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -173,6 +173,7 @@
     
     <string name="cancel_transfer_title">Cancel Transfer</string>
     <string name="cancel_transfer_confirmation">The transfer will be canceled, are you sure?</string>
+    <string name="cancel_all_transfer_confirmation">All the transfers will be canceled, are you sure?</string>
 
     <string name="section_cloud_drive" context="The name of every users root drive in the cloud of MEGA. The term \'cloud\' is a new computer term and can probably not be translated. Do not translate &quot;cloud&quot; literal unless your language allows this. Please see http://en.wikipedia.org/wiki/Cloud_computing for your reference.">Cloud Drive</string>
 	<string name="section_inbox" context="title of the screen that show the inbox">Inbox</string>
@@ -246,6 +247,7 @@
     <string name="download_began" context="message when the download starts">Download has started</string>
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Do you want to cancel the download?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Touch to cancel download</string>
+    <string name="download_touch_to_show" context="Hint how to cancel the download">Touch to show all the transfers</string>
     <string name="error_file_size_greater_than_4gb" context="Warning message">Most devices can\'t download files greater than 4GB. Your download will probably fail.</string>
     <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\'t any available app to execute this file on your device</string>
 	
@@ -418,6 +420,7 @@
     <string name="transfers_pause" context="File uploading or downloading has been paused (until the user continues at a later stage)">All transfers are paused</string>
     <string name="menu_pause_transfers" context="menu item">Pause transfers</string>
     <string name="menu_restart_transfers" context="menu item">Restart transfers</string>
+    <string name="menu_cancel_all_transfers" context="menu item">Cancel all transfers</string>
     <string name="menu_take_picture" context="menu item">Take picture</string>
     
     <string name="cam_sync_wifi" context="how to upload the camera images. only when Wi-Fi connected">Wi-Fi only</string>
