--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -489,17 +489,17 @@
     <string name="ZIP_download_permission" context="A compressed file will be downloaded and decompressed.">O ficheiro zip vai ser descarregado e expandido</string>
     <string name="ZIP_unzip_permission" context="A compressed file will be decompressed.">O ficheiro zip vai ser expandido</string>
     
-    <string name="sortby_name" context="category in sort by action">Por nome</string>
-    <string name="sortby_name_ascending" context="sort files alphabetically ascending">ascendente</string>
-    <string name="sortby_name_descending" context="sort files alphabetically descending">descendente</string>
+    <string name="sortby_name" context="category in sort by action">Nome</string>
+    <string name="sortby_name_ascending" context="sort files alphabetically ascending">Ascendente</string>
+    <string name="sortby_name_descending" context="sort files alphabetically descending">Descendente</string>
     
-    <string name="sortby_date" context="category in sort by action">Por data</string>
-    <string name="sortby_date_newest" context="sort files by date newest first">mais recente</string>
-    <string name="sortby_date_oldest" context="sort files by date oldest first">mais antiga</string>
+    <string name="sortby_date" context="category in sort by action">Data</string>
+    <string name="sortby_date_newest" context="sort files by date newest first">Mais recente</string>
+    <string name="sortby_date_oldest" context="sort files by date oldest first">Mais antiga</string>
     
-    <string name="sortby_size" context="category in sort by action">Por tamanho</string>
-    <string name="sortby_size_largest_first" context="sort files by size largest first">mais pesados</string>
-    <string name="sortby_size_smallest_first" context="sort files by size smallest first">mais leves</string>
+    <string name="sortby_size" context="category in sort by action">Tamanho</string>
+    <string name="sortby_size_largest_first" context="sort files by size largest first">Mais pesados</string>
+    <string name="sortby_size_smallest_first" context="sort files by size smallest first">Mais leves</string>
     
 	<string name="per_month" context="in payments, for example: 4.99€ per month">por mês</string>
     <string name="per_year" context="in payments, for example: 49.99€ per year">por ano</string>
